--- a/myjouney.html
+++ b/myjouney.html
@@ -11,17 +11,17 @@
 
     <div class="image-gallery">
         <div class="image-container">
-            <img src="exercise.jpg" alt="Image 1">
+            <img src="resources/exercise.jpg" alt="Image 1">
             <p>Heath</p>
         </div>
 
         <div class="image-container">
-            <img src="knowledge.jpg" alt="Image 2">
+            <img src="resources/knowledge.jpg" alt="Image 2">
             <p>Knowledge</p>
         </div>
 
         <div class="image-container">
-            <img src="party.jpg" alt="Image 3">
+            <img src="resources/party.jpg" alt="Image 3">
             <p>Happiness</p>
         </div>
     </div>
