--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>My CSTU Story</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="homepage1.html">Home</a>
       <a href="myjouney.html">My Journey</a>
       <a href="myfuture.html">My Future</a>
     </nav>
